# Labs_LETI

./: .gitignore  .gittoken  README.md
1sem/1_1/: 1.cpp  CMakeLists.txt
1sem/1_2/: main.cpp
1sem/2/: main.cpp
1sem/3/: main.cpp  repeat_f.txt
1sem/4/: input1.txt  main.cpp  result1.txt  result2.txt
1sem/5/: main.cpp  text.txt
1sem/kursovaia1/: CMakeLists.txt  main.cpp  points.txt  result_kratko.txt
2sem/kurs/: CMakeLists.txt  main.cpp
2sem/kurs/headers/: situations.h
2sem/kurs/headers/countStamps/: elemListOfCountStamps.h  listOfCountStamps.h  situations.h
2sem/kurs/headers/functions/: functions.h
2sem/kurs/headers/informationAboutLetters/: elementOfListLetters.h  listOfLetters.h
2sem/kurs/headers/listOfPartsString/: dataOfPartString.h  partOfString.h
2sem/kurs/headers/oldAndNewRatesForLetters/: elementOfOldAndNewRates.h  listOfOldAndNewRates.h  rateValues.h
2sem/kurs/headers/stickeredStamps/: elementOfStikeredStamps.h  stickeredStamps.h
2sem/kurs/src/countStamps/: elemListOfCountStamps.cpp  listOfCountStamps.cpp
2sem/kurs/src/functions/: functions.cpp
2sem/kurs/src/informationAboutLetters/: elementOfListLetters.cpp  listOfLetters.cpp
2sem/kurs/src/listOfPartsString/: dataOfPartString.cpp  partOfString.cpp
2sem/kurs/src/oldAndNewRatesForLetters/: elementOfOldAndNewRates.cpp  listOfOldAndNewRates.cpp  rateValues.cpp
2sem/kurs/src/stickeredStamps/: stickeredStamps.cpp
2sem/kurs/text-files/: idea.txt  informationAboutLetters.txt  log.txt  numberAndDenominationsOfStamps.txt  oldAndNewRatesForLetters.txt  test.txt
2sem/lab1/: main.cpp
2sem/lab1_part2_2sem_proga/: .gitignore  main.cpp
2sem/lab2_2sem_proga/: .gitignore  All_Strings.h  CMakeLists.txt  Functions.cpp  Functions.h  Situations.h  input.cpp  main.cpp  output.cpp  process.cpp
2sem/lab3/: .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  List.h  elementList.h  header.h  informationOfTheElement.h  main.cpp  situations.h
2sem/lab4/: CMakeLists.txt  LIstOfStrings.h  elementOfStringList.cpp  elementOfStringList.h  functions.cpp  functions.h  informationOfPartString.h  listOfPartsString.cpp  listOfPartsString.h  listOfStrings.cpp  main.cpp  situations.h
3sem/Algorithms_and_data_structures/courseWork/: CMakeLists.txt  main.cpp
3sem/Algorithms_and_data_structures/courseWork/Google_tests/: CMakeLists.txt  UnitTests.cpp
3sem/Algorithms_and_data_structures/courseWork/headers/functions/: functions.h
3sem/Algorithms_and_data_structures/courseWork/headers/stack/: elemOfStack.h  stack.h
3sem/Algorithms_and_data_structures/courseWork/src/functions/: functions.cpp
3sem/Algorithms_and_data_structures/courseWork/src/stack/: elemOfStack.cpp  stack.cpp
3sem/Algorithms_and_data_structures/lab1/: CMakeLists.txt  main.cpp
3sem/Algorithms_and_data_structures/lab2/: CMakeLists.txt  main.cpp
3sem/Algorithms_and_data_structures/lab2/Google_tests/: CMakeLists.txt  functionTests.cpp
3sem/Algorithms_and_data_structures/lab3/: CMakeLists.txt  main.cpp
3sem/Algorithms_and_data_structures/lab3/Google_tests/: CMakeLists.txt  UnitTests.cpp  binaryTreeSearchTests.cpp
3sem/Algorithms_and_data_structures/lab3/headers/: elemOfQueue.h  queue.h
3sem/Algorithms_and_data_structures/lab3/headers/binaryTreeSearch/: binaryTreeSearch.h  elemOfBinaryTreeSearch.h
3sem/Algorithms_and_data_structures/lab3/headers/iterator/: iterator.h
3sem/Algorithms_and_data_structures/lab3/headers/iterators/: binaryTreeSearchBreadthFirstTraverseIterator.h  binaryTreeSearchDepthFirstTraverseIterator.h  iterator.h
3sem/Algorithms_and_data_structures/lab3/headers/queue/: elemOfQueue.h  queue.h
3sem/Algorithms_and_data_structures/lab3/headers/stack/: elemOfStack.h  stack.h
3sem/Algorithms_and_data_structures/lab3/src/: elemOfQueue.cpp  queue.cpp
3sem/Algorithms_and_data_structures/lab3/src/binaryTreeSearch/: binaryTreeSearch.cpp  elemOfBinaryTreeSearch.cpp
3sem/Algorithms_and_data_structures/lab3/src/iterators/: binaryTreeSearchBreadthFirstTraverseIterator.cpp  binaryTreeSearchDepthFirstTraverseIterator.cpp
3sem/Algorithms_and_data_structures/lab3/src/queue/: elemOfQueue.cpp  queue.cpp
3sem/Algorithms_and_data_structures/lab3/src/stack/: elemOfStack.cpp  stack.cpp
3sem/CTPVP/: 1Lab.vi
3sem/OrgElCompAndSyst/lab1/: main.c  main.cpp
3sem/OrgElCompAndSyst/lab2/: main.c
3sem/OrgElCompAndSyst/lab3/: main.c
3sem/OrgElCompAndSyst/lab4/: main.c
3sem/OrgElCompAndSyst/lab5/: main.c
6sem/OptimizationMethods/lab1/: bisectiondraw.py  bisectionsearch.py  main.py  task.txt
6sem/OptimizationMethods/lab10/: DFPdraw.py  DFPsearch.py  main.py  task.txt
6sem/OptimizationMethods/lab11/: draw.py  main.py  task.txt  trustregionsearch.py
6sem/OptimizationMethods/lab12/: main.py  nagDraw.py  nagsearch.py  task.txt
6sem/OptimizationMethods/lab2/: goldensearch.py  main.py  task.txt
6sem/OptimizationMethods/lab3/: main.py  newton.py  newtondraw.py  task.txt
6sem/OptimizationMethods/lab4/: main.py  secantdraw.py  secantsearch.py  task.txt
6sem/OptimizationMethods/lab5/: gradientDraw.py  gradientsearch.py  task.txt
6sem/OptimizationMethods/lab6/: steepestsearch.py  (+1 more)
(+27 files in other folders)
